--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 ---
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+layout: page
+title: About me
 ---
+
+Hello, nice to meet you! I'm currently in my 3B term of Computer Engineering at the University of Waterloo. 
+
+I generally enjoy working on side projects with a high degree of architectural and theoretical complexity, such as my WIP Native x64 C++ Debugger or Custom Interpreter.
+
+I am a team member doing embedded and FPGA programming with my design team at [UW Reality Labs](https://uwrealitylabs.com), where we are working with low-power implementation with Efinix Trion FPGAs to create robust VR headset. 
+
+If you're looking to connect to talk about experiences, education, connect about an opportunity, or just hangout, feel free to send me an email or connect on linkedin!
