--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: page
-title: Hey! Welcome to my personal website!
+title: Hey! Welcome to my website!
 ---
 <img src="/assets/img/Profile Picture.png" alt="Profile Picture">
